working solution to Project 2

--- a/final-project-parameters.json
+++ b/final-project-parameters.json
@@ -8,6 +8,10 @@
 		"ParameterValue": "10.0.0.0/16"
 	},
 	{
+		"ParameterKey": "EC2AMI",
+		"ParameterValue": "ami-0747bdcabd34c712a"
+	},
+	{
 		"ParameterKey": "PublicSubnet1CIDR",
 		"ParameterValue": "10.0.0.0/24"
 	},
@@ -23,4 +27,5 @@
 		"ParameterKey": "PrivateSubnet2CIDR",
 		"ParameterValue": "10.0.3.0/24"
 	}
+
 ]
