--- a/final-project-parameters.json
+++ b/final-project-parameters.json
@@ -26,6 +26,11 @@
 	{
 		"ParameterKey": "PrivateSubnet2CIDR",
 		"ParameterValue": "10.0.3.0/24"
+	},
+	{
+		"ParameterKey": "JumpBoxKeyName",
+		"ParameterValue": "project2-jumpbox"
 	}
+
 
 ]
