--- a/final-project.yml
+++ b/final-project.yml
@@ -35,6 +35,10 @@ Parameters:
     Type: String
     Default: 10.0.3.0/24
 
+  JumpBoxKeyName:
+    Description: Key name in paramaters to avoid it being in the jumpbox configuration
+    Type: String
+
 Resources:
   # <-----------------Resources for Network-------------------------->
   VPC:
@@ -378,7 +382,7 @@ Resources:
     Properties:
       ImageId: ami-02e136e904f3da870
       InstanceType: t2.micro
-      KeyName: project2-jumpbox
+      KeyName: !Ref JumpBoxKeyName
       NetworkInterfaces:
         - AssociatePublicIpAddress: true
           DeviceIndex: 0
